# embed

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
esp8266/main/: main.ino  test.h
esp8266/main/src/main/: main.cpp  main.h
esp8266/main/src/tinyframe/: TinyFrame.h
pico/: CMakeLists.txt
pico/demo/: CMakeLists.txt  main.c  pico_readme.md
pico/hello/: CMakeLists.txt  TF_Config.h  main.c  xlog.c  xlog.h
